[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Scripts/BattleSystem/PlayerHUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Prefabs/GUI/NameBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Art/GUI/hud_background_bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/GUI/hud_hpBar.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/visitor1.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Art/GUI/hud_spBar.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/GUI/hud_mpBar.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 10
use_mipmaps = true
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="PlayerHUD" type="Node2D" index="0"]

position = Vector2( 7, 18 )
scale = Vector2( 1.66, 1.55 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="NameBackground" parent="." index="0" instance=ExtResource( 2 )]

[node name="PlayerHPBar" type="TextureProgress" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -50.0
margin_right = 78.0
margin_bottom = -34.0
rect_min_size = Vector2( 96, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = true
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[node name="HPText" type="Label" parent="PlayerHPBar" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = -1.0
margin_right = 72.0
margin_bottom = 13.0
rect_scale = Vector2( 1.4, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "50/100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="PlayerSPBar" type="TextureProgress" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -33.0
margin_right = 78.0
margin_bottom = -17.0
rect_min_size = Vector2( 96, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = true
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 6 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[node name="SPText" type="Label" parent="PlayerSPBar" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = -1.0
margin_right = 72.0
margin_bottom = 13.0
rect_scale = Vector2( 1.4, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "50/100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="PlayerMPBar" type="TextureProgress" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -16.0
margin_right = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = true
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 7 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[node name="MPText" type="Label" parent="PlayerMPBar" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = -1.0
margin_right = 72.0
margin_bottom = 13.0
rect_scale = Vector2( 1.4, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "50/100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]


